<resources>
    <string name="app_name">Train Tickets</string>
    <string name="use_card">Use Card</string>
    <string name="verify">Verify</string>
    <string name="type">What kind of ticket?</string>
    <string name="priority">Do you have priority?</string>

    <string name="one_way">One Way</string>
    <string name="round_trip">Round Trip</string>
    <string name="day_pass">Day Pass</string>

    <string name="total_sold">Total Tickets Sold Today:</string>
    <string name="start_amount">Start Location</string>
    <string name="end_amount">End Location</string>
    <string name="save_card">Save Card</string>
    
    <string name="card_num">Card Number:</string>
    <string name="name_on_card">Name on card:</string>
    <string name="enter_info">Enter your card information:</string>


</resources>
